Add responsive design

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
   <header>
-    <aside>Admin Username</aside>
+    <aside><img class="header-icon" src="Images/white-profile.svg">Admin Username <img class="header-icon down-arrow" src="Images/blue-down-arrow.svg" alt="blue-arrow"></aside>
       <menu>
-        <li>shares</li>
-        <li>playlists</li>
-        <li>personal videos</li>
+        <li id="share"><img class="header-icon" src="Images/white-share.svg">shares</li>
+        <li><img class="header-icon" src="Images/blue-list.svg">playlists</li>
+        <li><img class="header-icon" src="Images/blue-profile.svg">personal videos</li>
       </menu>
-      <h1><img class="PG-logo" alt="PyeongChang Olympic Games Logo" src="Images/Olympic-Rings-Black-Background.png">
+      <h1><img class="PG-logo" alt="PyeongChang Olympic Games Logo" src="Images/transparent-rings.png">
       </h1>
   </header>
   <main>
