Add all 8 sports

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <img class="arrow-logo" src="Images/left-arrow.svg">
           <div class="views">
             <p>VIEWS</p>
-            <p>02</p>
+            <p class="view-number">02</p>
           </div>
         </section>
         <section class="article-footer">
@@ -34,7 +34,7 @@
           <p class="card-date">Begins: February 9</p>
           <p class="link-box"><a href="http://www.nbcolympics.com/freestyle-skiing">www.nbcolympics.com/freestyle-skiing</a></p>
           <p class="reigning-champ">Reigning Champion</p>
-          <p class="country">Canada</p>
+          <p class="country">Norway</p>
           <p class="events">Events</p>
           <p class="event-number">10</p>
         </section>
@@ -44,7 +44,7 @@
           <img class="arrow-logo" src="Images/left-arrow.svg">
           <div class="views">
             <p>VIEWS</p>
-            <p>05</p>
+            <p class="view-number">05</p>
           </div>
         </section>
         <section class="article-footer">
@@ -62,7 +62,7 @@
           <img class="arrow-logo" src="Images/left-arrow.svg">
           <div class="views">
             <p>VIEWS</p>
-            <p>06</p>
+            <p class="view-number">06</p>
           </div>
         </section>
         <section class="article-footer">
@@ -70,7 +70,7 @@
           <p class="card-date">Begins: February 9</p>
           <p class="link-box"><a href="http://www.nbcolympics.com/figure-skating">www.nbcolympics.com/figure-skating</a></p>
           <p class="reigning-champ">Reigning Champion</p>
-          <p class="country">Canada</p>
+          <p class="country">Russia</p>
           <p class="events">Events</p>
           <p class="event-number">05</p>
         </section>
@@ -80,7 +80,7 @@
           <img class="arrow-logo" src="Images/left-arrow.svg">
           <div class="views">
             <p>VIEWS</p>
-            <p>02</p>
+            <p class="view-number">02</p>
           </div>
         </section>
         <section class="article-footer">
@@ -98,7 +98,7 @@
           <img class="arrow-logo" src="Images/left-arrow.svg">
           <div class="views">
             <p>VIEWS</p>
-            <p>03</p>
+            <p class="view-number">03</p>
           </div>
         </section>
         <section class="article-footer">
@@ -106,13 +106,66 @@
           <p class="card-date">Begins: February 10</p>
           <p class="link-box"><a href="http://www.nbcolympics.com/luge">www.nbcolympics.com/luge</a></p>
           <p class="reigning-champ">Reigning Champion</p>
-          <p class="country">Canada</p>
+          <p class="country">Sweden</p>
+          <p class="events">Events</p>
+          <p class="event-number">11</p>
+        </section>
+      </article>
+      <article>
+        <section class="article-header bobsled">          
+          <img class="arrow-logo" src="Images/left-arrow.svg">
+          <div class="views">
+            <p>VIEWS</p>
+            <p class="view-number">03</p>
+          </div>
+        </section>
+        <section class="article-footer">
+          <p class="card-name">Bobsled</p>
+          <p class="card-date">Begins: February 18</p>
+          <p class="link-box"><a href="http://www.nbcolympics.com/bobsled">www.nbcolympics.com/bobsled</a></p>
+          <p class="reigning-champ">Reigning Champion</p>
+          <p class="country">Jamaica</p>
+          <p class="events">Events</p>
+          <p class="event-number">03</p>
+        </section>
+      </article>
+      <article>
+        <section class="article-header ski-jumping">
+          <img class="arrow-logo" src="Images/left-arrow.svg">
+          <div class="views">
+            <p>VIEWS</p>
+            <p class="view-number">08</p>
+          </div>
+        </section>
+        <section class="article-footer">
+          <p class="card-name">Ski Jumping</p>
+          <p class="card-date">Begins: February 8</p>
+          <p class="link-box"><a href="http://www.nbcolympics.com/ski-jumping">www.nbcolympics.com/ski-jumping</a></p>
+          <p class="reigning-champ">Reigning Champion</p>
+          <p class="country">USA</p>
+          <p class="events">Events</p>
+          <p class="event-number">04</p>
+        </section>
+      </article>
+      <article>
+        <section class="article-header biathlon">
+          <img class="arrow-logo" src="Images/left-arrow.svg">
+          <div class="views">
+            <p>VIEWS</p>
+            <p class="view-number">02</p>
+          </div>
+        </section>
+        <section class="article-footer">
+          <p class="card-name">Biathlon</p>
+          <p class="card-date">Begins: February 10</p>
+          <p class="link-box"><a href="http://www.nbcolympics.com/biathlon">www.nbcolympics.com/biathlon</a></p>
+          <p class="reigning-champ">Reigning Champion</p>
+          <p class="country">China</p>
           <p class="events">Events</p>
           <p class="event-number">11</p>
         </section>
       </article>
     </section>
   </main>
-
 </body>
 </html>
